--- a/calico-cloud/about/product-comparison.mdx
+++ b/calico-cloud/about/product-comparison.mdx
@@ -32,65 +32,65 @@ What is the best fit for you? It depends on your needs. The following table prov
 
 ## Product comparison by feature
 
-| <center>Calico Open Source</center>                                         | <center>Calico Cloud</center>           | <center>Calico Enterprise</center> |
-| --------------------------------------------------------------------------- | --------------------------------------- | ---------------------------------- | -------------------------------------- |
-| **Networking security and scalability**                                     |                                         |                                    |                                        |
-| High-performance, scalable pod networking                                   | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Advanced IP address management                                              | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Direct infrastructure peering without the overlay                           | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Dual ToR peering                                                            |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Egress gateway                                                              |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Multiple Calico networks on a pod                                           |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Application, pod, cluster security**                                      | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center>  | <center>**Calico Enterprise**</center> |
-| Seamless support with Kubernetes network policy                             | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Label-based (identity-aware) policy                                         | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Namespace and cluster-wide scope                                            | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Global default deny policy design                                           | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Application layer policy                                                    | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Policy for services                                                         | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Web UI                                                                      |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Onboarding tutorials and lab cluster                                        |                                         | <center>&#10003</center>           |                                        |
-| DNS/FQDN-based policy                                                       |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Hierarchical tiered network policy                                          |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Policy recommendations                                                      |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Preview and staged network policy                                           |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Policy integration for third-party firewalls                                |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Network sets to limit IP ranges for egress and ingress traffic to workloads | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Data**                                                                    |                                         |                                    |                                        |
-| Data-in-transit encryption for pod traffic using WireGuard                  | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| SIEM integration                                                            |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Non-cluster hosts**                                                       | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Restrict traffic to/from hosts using network policy                         | <center>&#10003</center>                |                                    | <center>&#10003</center>               |
-| Automatic host endpoints                                                    | <center>&#10003</center>                |                                    | <center>&#10003</center>               |
-| Secure Kubernetes nodes with host endpoints managed by Calico               | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Apply policy to host-forwarded traffic                                      | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Dataplane**                                                               |                                         |                                    |                                        |
-| eBPF                                                                        | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| iptables                                                                    | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| Windows HNS                                                                 | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
-| VPP                                                                         | <center>&#10003</center>                |                                    |                                        |
-| **Image Assurance**                                                         |                                         |                                    |                                        |
-| Scan images for vulnerabilities for workloads in Kubernetes cluster         |                                         | <center>&#10003</center>           |                                        |
-| Create policy to block vulnerable images from your clusters                 |                                         | <center>&#10003</center>           |                                        |
-| Runtime view to assess impact of newly-found vulnerabilities                |                                         | <center>&#10003</center>           |                                        |
-| **Observability and troubleshooting**                                       |                                         |                                    |                                        |
-| Application level observability and troubleshooting                         |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Service Graph                                                               |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Packet capture                                                              |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Elasticsearch logs (flow, l7, audit, bgp, dns, events)                      |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Alerts                                                                      |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Kibana DNS dashboards                                                       |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Traffic Flow Visualizer                                                     |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Multi-cluster management**                                                |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Multi-cluster management                                                    |                                         |                                    | <center>&#10003</center>               |
-| Federated identity and services                                             |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Threat defense**                                                          |                                         |                                    |                                        |
-| Anomaly detection                                                           |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Container threat detection                                                  |                                         | <center>&#10003</center>           |                                        |
-| Workload-centric Web Application Firewall (WAF)                             |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| Add threatfeeds to trace suspicious network flows                           |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Reports**                                                                 |                                         |                                    |                                        |
-| Compliance reports                                                          |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| CIS benchmark reports                                                       |                                         | <center>&#10003</center>           | <center>&#10003</center>               |
-| **Monitor Calico components**                                               |                                         |                                    |                                        |
-| Prometheus                                                                  | <center>&#10003</center>                | <center>&#10003</center>           | <center>&#10003</center>               |
+|                                                                             | <center>Calico Open Source</center>     | <center>Calico Cloud</center>     | <center>Calico Enterprise</center>     |
+| --------------------------------------------------------------------------- | --------------------------------------- | --------------------------------- | -------------------------------------- |
+| **Networking security and scalability**                                     |                                         |                                   |                                        |
+| High-performance, scalable pod networking                                   | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Advanced IP address management                                              | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Direct infrastructure peering without the overlay                           | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Dual ToR peering                                                            |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Egress gateway                                                              |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Multiple Calico networks on a pod                                           |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Application, pod, cluster security**                                      | <center>**Calico Open Source**</center> | <center>**Calico Cloud**</center> | <center>**Calico Enterprise**</center> |
+| Seamless support with Kubernetes network policy                             | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Label-based (identity-aware) policy                                         | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Namespace and cluster-wide scope                                            | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Global default deny policy design                                           | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Application layer policy                                                    | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Policy for services                                                         | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Web UI                                                                      |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Onboarding tutorials and lab cluster                                        |                                         | <center>&#10003</center>          |                                        |
+| DNS/FQDN-based policy                                                       |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Hierarchical tiered network policy                                          |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Policy recommendations                                                      |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Preview and staged network policy                                           |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Policy integration for third-party firewalls                                |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Network sets to limit IP ranges for egress and ingress traffic to workloads | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Data**                                                                    |                                         |                                   |                                        |
+| Data-in-transit encryption for pod traffic using WireGuard                  | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| SIEM integration                                                            |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Non-cluster hosts**                                                       | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Restrict traffic to/from hosts using network policy                         | <center>&#10003</center>                |                                   | <center>&#10003</center>               |
+| Automatic host endpoints                                                    | <center>&#10003</center>                |                                   | <center>&#10003</center>               |
+| Secure Kubernetes nodes with host endpoints managed by Calico               | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Apply policy to host-forwarded traffic                                      | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Dataplane**                                                               |                                         |                                   |                                        |
+| eBPF                                                                        | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| iptables                                                                    | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| Windows HNS                                                                 | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
+| VPP                                                                         | <center>&#10003</center>                |                                   |                                        |
+| **Image Assurance**                                                         |                                         |                                   |                                        |
+| Scan images for vulnerabilities for workloads in Kubernetes cluster         |                                         | <center>&#10003</center>          |                                        |
+| Create policy to block vulnerable images from your clusters                 |                                         | <center>&#10003</center>          |                                        |
+| Runtime view to assess impact of newly-found vulnerabilities                |                                         | <center>&#10003</center>          |                                        |
+| **Observability and troubleshooting**                                       |                                         |                                   |                                        |
+| Application level observability and troubleshooting                         |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Service Graph                                                               |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Packet capture                                                              |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Elasticsearch logs (flow, l7, audit, bgp, dns, events)                      |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Alerts                                                                      |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Kibana DNS dashboards                                                       |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Traffic Flow Visualizer                                                     |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Multi-cluster management**                                                |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Multi-cluster management                                                    |                                         |                                   | <center>&#10003</center>               |
+| Federated identity and services                                             |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Threat defense**                                                          |                                         |                                   |                                        |
+| Anomaly detection                                                           |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Container threat detection                                                  |                                         | <center>&#10003</center>          |                                        |
+| Workload-centric Web Application Firewall (WAF)                             |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| Add threatfeeds to trace suspicious network flows                           |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Reports**                                                                 |                                         |                                   |                                        |
+| Compliance reports                                                          |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| CIS benchmark reports                                                       |                                         | <center>&#10003</center>          | <center>&#10003</center>               |
+| **Monitor Calico components**                                               |                                         |                                   |                                        |
+| Prometheus                                                                  | <center>&#10003</center>                | <center>&#10003</center>          | <center>&#10003</center>               |
