--- a/calico-enterprise/compliance/overview.mdx
+++ b/calico-enterprise/compliance/overview.mdx
@@ -56,6 +56,8 @@ Compliance reports provide the following high-level information:
 
 **Required**
 
+* You [Enabled compliance reports](../compliance/enable-compliance)
+
 - Ensure that all nodes in your Kubernetes clusters are time-synchronized using NTP or similar (for accurate audit log timestamps)
 
 - [Configure audit logs for Kubernetes resources](../visibility/elastic/audit-overview.mdx)
