--- a/calico_versioned_docs/version-3.28/networking/index.mdx
+++ b/calico_versioned_docs/version-3.28/networking/index.mdx
@@ -1,11 +1,65 @@
 ---
 description: Calico's flexible networking options reduce the barriers to adopting a CaaS platform solution. Determine the best networking option for your implementation.
-hide_table_of_contents: true
 ---
+
+import { DocCardLink, DocCardLinkLayout } from '/src/___new___/components';
 
 # Networking
 
-import DocCardList from '@theme/DocCardList';
-import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
+The {{prodname}} network plugins provide a range of networking options to fit your implementation and maximize performance.
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+## Getting started
+
+<DocCardLinkLayout>
+  <DocCardLink docId='networking/determine-best-networking' />
+  <DocCardLink docId='about/kubernetes-training/about-networking' />
+  <DocCardLink docId='about/kubernetes-training/about-k8s-networking' />
+</DocCardLinkLayout>
+
+## Configuring networking
+
+<DocCardLinkLayout>
+  <DocCardLink docId='networking/configuring/bgp' />
+  <DocCardLink docId='networking/configuring/vxlan-ipip' />
+  <DocCardLink docId='networking/configuring/advertise-service-ips' />
+  <DocCardLink docId='networking/configuring/mtu' />
+  <DocCardLink docId='networking/configuring/workloads-outside-cluster' />
+  <DocCardLink docId='networking/configuring/use-ipvs' />
+  <DocCardLink docId='networking/configuring/sidecar-acceleration' />
+  <DocCardLink docId='networking/configuring/pod-mac-address' />
+</DocCardLinkLayout>
+
+
+## IP address management
+
+<DocCardLinkLayout>
+  <DocCardLink docId='networking/ipam/get-started-ip-addresses' />
+  <DocCardLink docId='networking/ipam/ippools' />
+  <DocCardLink docId='networking/ipam/ip-autodetection' />
+  <DocCardLink docId='networking/ipam/ipv6' />
+  <DocCardLink docId='networking/ipam/ipv6-control-plane' />
+  <DocCardLink docId='networking/ipam/add-floating-ip' />
+  <DocCardLink docId='networking/ipam/use-specific-ip' />
+  <DocCardLink docId='networking/ipam/assign-ip-addresses-topology' />
+  <DocCardLink docId='networking/ipam/migrate-pools' />
+  <DocCardLink docId='networking/ipam/change-block-size' />
+  <DocCardLink docId='networking/ipam/legacy-firewalls' />
+</DocCardLinkLayout>
+
+
+## Networking for OpenStack
+
+<DocCardLinkLayout>
+  <DocCardLink docId='networking/openstack/dev-machine-setup' />
+  <DocCardLink docId='networking/openstack/ipv6' />
+  <DocCardLink docId='networking/openstack/connectivity' />
+  <DocCardLink docId='networking/openstack/labels' />
+  <DocCardLink docId='networking/openstack/configuration' />
+  <DocCardLink docId='networking/openstack/semantics' />
+  <DocCardLink docId='networking/openstack/floating-ips' />
+  <DocCardLink docId='networking/openstack/service-ips' />
+  <DocCardLink docId='networking/openstack/host-routes' />
+  <DocCardLink docId='networking/openstack/multiple-regions' />
+  <DocCardLink docId='networking/openstack/kuryr' />
+  <DocCardLink docId='networking/openstack/neutron-api' />
+</DocCardLinkLayout>
