--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -110,6 +110,33 @@ These steps differ based on your cluster type. If you are unsure of your cluster
         }
     </CodeBlock>
 
+1. (Optional) Compliance and packetcapture features are optional. To enable or maintain the enabled status, review the `values.yaml` file and set the flag to `enabled: true`.
+
+    If your `values.yaml` configuration does not include `compliance` or `packetCaptureAPI`, add them to the configuration and set to `enabled: true`
+
+    ```
+    packetCaptureAPI:
+        enabled: true
+
+    compliance:
+        enabled:true
+    ```
+
+    or
+
+    If you are using default `values.yaml`, copy the custom `values.yaml` and update compliance and packetCaptureAPI's `enabled`  to `true`. Then, replace `<path-to-values.yaml>` in the next step with this modified `values.yaml` for the helm upgrade.
+
+    <CodeBlock language='bash'>
+        {'{{version}}' === 'master'
+            ? (
+            `helm show values ./tigera-operator-v0.0.tgz >values.yaml`
+            )
+            : (
+            `helm show values ./tigera-operator-{{chart_version_name}}.tgz >values.yaml`
+            )
+        }
+    </CodeBlock>
+
 1. Run the Helm upgrade command for `tigera-operator` and make sure to either update `values.yaml` with your configuration or use custom `values.yaml` file:
 
   <CodeBlock language='bash'>
